EXTRA_DIST = \
        gim_boxpruning.cpp                gim_contact.cpp \
        gim_math.cpp                      gim_memory.cpp \
        gimpact.cpp                       gim_trimesh_capsule_collision.cpp \
        gim_trimesh.cpp                   gim_trimesh_ray_collision.cpp \
        gim_trimesh_sphere_collision.cpp  gim_trimesh_trimesh_collision.cpp \
        gim_tri_tri_overlap.cpp

